--- a/.github/workflows/update-data.yaml
+++ b/.github/workflows/update-data.yaml
@@ -1,9 +1,9 @@
 ---
 name: Update data
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   schedule:
     - cron: "0 8 * * 1"
 
