--- a/.github/workflows/update-data.yaml
+++ b/.github/workflows/update-data.yaml
@@ -5,7 +5,8 @@ on:
   #   branches:
   #     - main
   schedule:
-    - cron: "0 8 * * 1"
+    # - cron: "0 8 * * 1"
+    - cron: "0 5 * * 2"
 
 jobs:
 
